# gpu_powered_synthesizer

./: 1  CMakeLists.txt  README.md  file
JUCE_PROJ/AddTard/: AddTard.jucer  CMakeLists.txt
JUCE_PROJ/AddTard/JuceLibraryCode/: JuceHeader.h
JUCE_PROJ/AddTard/Source/: Display.cpp  Display.h  Gui.cpp  Gui.h  Main.cpp  MainComponent.cpp  MainComponent.h  SynthADSR.cpp  SynthADSR.h  constants.h  engine.cpp  engine.h  lfo.cpp  lfo.h
JUCE_PROJ/AddTard/Source/kernel/: CMakeLists.txt  kernel.cu  kernel.h
karnel/: kernel.cu  kernel.h
src/: ADSR.cpp  ADSR.h  RtAudio.h  constants.h  engine.cpp  engine.h  lfo.cpp  lfo.h  main.cpp  presets.h  qt_user_io.hpp  user_io_helper.h  voice_data.h
